--- a/src/sections/footer/footer.module.css
+++ b/src/sections/footer/footer.module.css
@@ -4,6 +4,8 @@
   border-top: 1px solid var(--color-border);
 }
 
+
+
 .container {
   max-width: var(--container-max-width);
   margin: 0 auto;
@@ -29,7 +31,6 @@
 }
 
 .logo img {
-  height: 45px;
   width: auto;
 }
 
@@ -100,6 +101,7 @@
 /* Social */
 .socialLinks {
   display: flex;
+  
   gap: var(--spacing-md);
 }
 
@@ -109,12 +111,16 @@
   justify-content: center;
   width: 40px;
   height: 40px;
+  rotate: 45deg;
   color: var(--color-text-secondary);
   background-color: var(--color-primary-bg);
   border: 1px solid var(--color-border);
   transition: all var(--transition-base);
 }
 
+.socialLink svg{
+  rotate: -45deg;
+}
 .socialLink:hover {
   color: var(--color-text-accent);
   border-color: var(--color-text-accent);
