--- a/src/components/navBar/navBar.module.css
+++ b/src/components/navBar/navBar.module.css
@@ -53,7 +53,7 @@ height: 70px;
   text-transform: uppercase;
   letter-spacing: 0.15em;
   color: var(--color-text-primary);
-  transition: color var(--transition-base);
+  transition: color var(--transition-slow);
   position: relative;
 }
 
@@ -65,7 +65,7 @@ height: 70px;
   width: 0;
   height: 1px;
   background-color: var(--color-text-accent);
-  transition: width var(--transition-base);
+  transition: width var(--transition-slow);
 }
 
 .navLink:hover {
