--- a/src/sections/hero/hero.module.css
+++ b/src/sections/hero/hero.module.css
@@ -219,8 +219,9 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: rgba(255,255,255,0.1);
-  transition: all 0.3s;
+  border: 1px double var(--color-text-secondary);
+
+  transition: all 0.5s;
 }
 .btnThree:hover::before {
   opacity: 0 ;
@@ -235,10 +236,9 @@
   height: 100%;
   z-index: 1;
   opacity: 0;
-  transition: all 0.3s;
-  border: 1px solid var(--color-text-accent);
+  transition: all 0.5s;
   transform: scale(1.2,1.2);
-  
+  border: 1px double var(--color-text-accent-opacity);
 }
 .btnThree:hover::after {
   opacity: 1;
